KD-tree optimizations

--- a/tutorial/paper_results/planetary_transit.ipynb
+++ b/tutorial/paper_results/planetary_transit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "0.0009545942339693249"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,53 +76,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                                             | 0/100 [00:00<?, ?it/s]"
+      "/Users/mjablons/Documents/stellar-mesh-integration/src/spice/models/mesh_model.py:245: UserWarning: If override_log_g is True, either parameter_names must include one of [logg,loggs,log_g,log_gs,log g,log gs,surface gravity,surface gravities,surface_gravity,surface_gravities], or log_g_index must be passed for log g to be used in the spectrum emulator.\n",
+      "  warnings.warn(f\"If override_log_g is True, either parameter_names must include one of [\" + \",\".join(\n",
+      "/Users/mjablons/Documents/stellar-mesh-integration/src/spice/models/mesh_model.py:245: UserWarning: If override_log_g is True, either parameter_names must include one of [logg,loggs,log_g,log_gs,log g,log gs,surface gravity,surface gravities,surface_gravity,surface_gravities], or log_g_index must be passed for log g to be used in the spectrum emulator.\n",
+      "  warnings.warn(f\"If override_log_g is True, either parameter_names must include one of [\" + \",\".join(\n",
+      "  0%|          | 0/100 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using search radius factor: 3.9042473\n"
+      "Using search radius factor: 3.641673\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-08-20 00:03:46.919810: W external/xla/xla/hlo/transforms/simplifiers/hlo_rematerialization.cc:3021] Can't reduce memory use below 28.26GiB (30344769378 bytes) by rematerialization; only reduced to 210.94GiB (226497171348 bytes), down from 252.35GiB (270956875816 bytes) originally\n",
-      "2025-08-20 00:04:01.699817: W external/xla/xla/tsl/framework/bfc_allocator.cc:501] Allocator (GPU_0_bfc) ran out of memory trying to allocate 250.78GiB (rounded to 269274331392)requested by op \n",
-      "2025-08-20 00:04:01.711674: W external/xla/xla/tsl/framework/bfc_allocator.cc:512] **__________________________________________________________________________________________________\n",
-      "E0820 00:04:01.711737  222409 pjrt_stream_executor_client.cc:3026] Execution of replica 0 failed: RESOURCE_EXHAUSTED: Out of memory while trying to allocate 269274331304 bytes. [tf-allocator-allocation-error='']\n",
-      "  0%|                                                                                                                                             | 0/100 [00:18<?, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "XlaRuntimeError",
-     "evalue": "RESOURCE_EXHAUSTED: Out of memory while trying to allocate 269274331304 bytes.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mXlaRuntimeError\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m binary = add_orbit(binary, (\u001b[32m2\u001b[39m*u.d).to(u.year).value, \u001b[32m0.\u001b[39m, \u001b[32m0.\u001b[39m, \u001b[32m0.\u001b[39m, \u001b[32m0.\u001b[39m, \u001b[32m0.\u001b[39m, \u001b[32m0.\u001b[39m, \u001b[32m0.\u001b[39m, \u001b[32m0.\u001b[39m, \u001b[32m1\u001b[39m)\n\u001b[32m      7\u001b[39m times = jnp.linspace(\u001b[32m0.\u001b[39m, (\u001b[32m2\u001b[39m*u.d).to(u.year).value, \u001b[32m100\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m result = [\u001b[43mevaluate_orbit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbinary\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m tqdm(times)]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/scr/mj8805/miniconda3/envs/astro/lib/python3.12/site-packages/spice/models/binary.py:363\u001b[39m, in \u001b[36mevaluate_orbit\u001b[39m\u001b[34m(binary, time, search_radius_factor)\u001b[39m\n\u001b[32m    360\u001b[39m     search_radius_factor = get_optimal_search_radius(binary.body1, binary.body2)\n\u001b[32m    361\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mUsing search radius factor:\u001b[39m\u001b[33m\"\u001b[39m, search_radius_factor)\n\u001b[32m--> \u001b[39m\u001b[32m363\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_evaluate_orbit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbinary\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtime\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msearch_radius_factor\u001b[49m\u001b[43m)\u001b[49m\n",
-      "    \u001b[31m[... skipping hidden 5 frame]\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/scr/mj8805/miniconda3/envs/astro/lib/python3.12/site-packages/jax/_src/interpreters/pxla.py:1306\u001b[39m, in \u001b[36mExecuteReplicated.__call__\u001b[39m\u001b[34m(self, *args)\u001b[39m\n\u001b[32m   1304\u001b[39m   \u001b[38;5;28mself\u001b[39m._handle_token_bufs(result_token_bufs, sharded_runtime_token)\n\u001b[32m   1305\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1306\u001b[39m   results = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mxla_executable\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute_sharded\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_bufs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1308\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m dispatch.needs_check_special():\n\u001b[32m   1309\u001b[39m   out_arrays = results.disassemble_into_single_device_arrays()\n",
-      "\u001b[31mXlaRuntimeError\u001b[39m: RESOURCE_EXHAUSTED: Out of memory while trying to allocate 269274331304 bytes."
+      "  1%|          | 1/100 [00:02<04:00,  2.43s/it]"
      ]
     }
    ],
    "source": [
     "#body1 = IcosphereModel.construct(500, 1., 1., tp.to_parameters(), tp.stellar_parameter_names)\n",
-    "body1 = IcosphereModel.construct(10000, 1., 1., bb.to_parameters(), bb.stellar_parameter_names)\n",
-    "body2 = IcosphereModel.construct(10000, u.R_jupiter.to(u.solRad), u.M_jupiter.to(u.solMass),\n",
+    "body1 = IcosphereModel.construct(1000, 1., 1., bb.to_parameters(), bb.stellar_parameter_names)\n",
+    "body2 = IcosphereModel.construct(1000, u.R_jupiter.to(u.solRad), u.M_jupiter.to(u.solMass),\n",
     "                                 bb.to_parameters(), bb.stellar_parameter_names)\n",
     "binary = Binary.from_bodies(body1, body2)\n",
     "binary = add_orbit(binary, (2*u.d).to(u.year).value, 0., 0., 0., 0., 0., 0., 0., 0., 1)\n",
@@ -132,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -413,9 +399,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (astro)",
+   "display_name": "astro",
    "language": "python",
-   "name": "astro"
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
