--- a/tutorial/paper_results/tz_fornacis_eclipse_plots.ipynb
+++ b/tutorial/paper_results/tz_fornacis_eclipse_plots.ipynb
@@ -1,10 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnpicklingError",
+     "evalue": "pickle data was truncated",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mUnpicklingError\u001b[39m                           Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 13\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m# Load the pickle files\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m/Users/mjablons/Documents/stellar-mesh-integration/tutorial/paper_results/tz_fornacis_data_eclipses_40000.pkl\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mrb\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m---> \u001b[39m\u001b[32m13\u001b[39m     data = \u001b[43mpickle\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mUnpicklingError\u001b[39m: pickle data was truncated"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import numpy as np\n",
@@ -17,7 +34,7 @@
     "%matplotlib inline\n",
     "\n",
     "# Load the pickle files\n",
-    "with open(\"/Users/mjablons/Documents/stellar-mesh-integration/tutorial/paper_results/tz_fornacis_data_eclipses_10000.pkl\", \"rb\") as f:\n",
+    "with open(\"/Users/mjablons/Documents/stellar-mesh-integration/tutorial/paper_results/tz_fornacis_data_eclipses_40000.pkl\", \"rb\") as f:\n",
     "    data = pickle.load(f)"
    ]
   },
