--- a/tutorial/paper_results/tz_fornacis_plots.ipynb
+++ b/tutorial/paper_results/tz_fornacis_plots.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/Users/mjablons/Documents/stellar-mesh-integration/tutorial/paper_results/tz_fornacis_data_40000.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 10\u001b[39m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mspice\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mspectrum\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mfilter\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Bolometric, GaiaG, GaiaRP, GaiaBP\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Load the pickle files\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m/Users/mjablons/Documents/stellar-mesh-integration/tutorial/paper_results/tz_fornacis_data_40000.pkl\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrb\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     11\u001b[39m     data = pickle.load(f)\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# with open(\"/Users/mjablons/Documents/stellar-mesh-integration/tutorial/paper_results/tz_fornacis_close.pkl\", \"rb\") as f:\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m#     data_close = pickle.load(f)\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/anaconda3/envs/astro/lib/python3.11/site-packages/IPython/core/interactiveshell.py:326\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    319\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    320\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    321\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    322\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    323\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    324\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m326\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: '/Users/mjablons/Documents/stellar-mesh-integration/tutorial/paper_results/tz_fornacis_data_40000.pkl'"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import numpy as np\n",
@@ -15,11 +28,11 @@
     "from spice.spectrum.filter import Bolometric, GaiaG, GaiaRP, GaiaBP\n",
     "\n",
     "# Load the pickle files\n",
-    "with open(\"/Users/mjablons/Documents/stellar-mesh-integration/tutorial/paper_results/tz_fornacis_data_100000.pkl\", \"rb\") as f:\n",
+    "with open(\"/Users/mjablons/Documents/stellar-mesh-integration/tutorial/paper_results/tz_fornacis_data_40000.pkl\", \"rb\") as f:\n",
     "    data = pickle.load(f)\n",
     "    \n",
-    "with open(\"/Users/mjablons/Documents/stellar-mesh-integration/tutorial/paper_results/tz_fornacis_close.pkl\", \"rb\") as f:\n",
-    "    data_close = pickle.load(f)"
+    "# with open(\"/Users/mjablons/Documents/stellar-mesh-integration/tutorial/paper_results/tz_fornacis_close.pkl\", \"rb\") as f:\n",
+    "#     data_close = pickle.load(f)"
    ]
   },
   {
