Add ring spot mesh API and demo

--- a/tutorial/ring_spot_demo.ipynb
+++ b/tutorial/ring_spot_demo.ipynb
@@ -1,208 +1,210 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Ring spot helper demonstration\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "This notebook walks through the `spice.utils.ring_spot` helpers that model a cool umbra surrounded by a warmer plage ring.\n",
-        "We will generate a simple icosphere mesh, perturb its temperature and Ca abundance labels, and finally show how to\n",
-        "scale the Ca II IRT line depths for any surface element.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import jax.numpy as jnp\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "from spice.models.mesh_generation import icosphere\n",
-        "from spice.utils.ring_spot import (\n",
-        "    RingSpotConfig,\n",
-        "    ring_spot_weights,\n",
-        "    apply_ring_spot_to_labels,\n",
-        "    ca_irt_scale_map,\n",
-        "    apply_ca_irt_scaling_local,\n",
-        ")\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Build a toy mesh and evaluate the ring weights\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "cfg = RingSpotConfig()\n",
-        "\n",
-        "# Build a modest icosphere mesh so plots stay snappy\n",
-        "_, _, areas, centers = icosphere(2000)\n",
-        "\n",
-        "# Treat the facet centers as surface-normal directions\n",
-        "n_hat = jnp.asarray(centers)\n",
-        "n_hat = n_hat / jnp.linalg.norm(n_hat, axis=1, keepdims=True)\n",
-        "\n",
-        "# Point the spot at the +Z axis\n",
-        "s_hat = jnp.array([0.0, 0.0, 1.0])\n",
-        "\n",
-        "w_umb, w_plage = ring_spot_weights(n_hat, s_hat, cfg)\n",
-        "\n",
-        "n_hat_np = np.asarray(n_hat)\n",
-        "lon = np.degrees(np.arctan2(n_hat_np[:, 1], n_hat_np[:, 0]))\n",
-        "lat = np.degrees(np.arcsin(n_hat_np[:, 2]))\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
-        "sc0 = axes[0].scatter(lon, lat, c=np.array(w_umb), s=10, cmap='magma', vmin=0.0)\n",
-        "axes[0].set_title('Umbra weight')\n",
-        "axes[0].set_xlabel('Longitude [deg]')\n",
-        "axes[0].set_ylabel('Latitude [deg]')\n",
-        "fig.colorbar(sc0, ax=axes[0], label='w_umb')\n",
-        "\n",
-        "sc1 = axes[1].scatter(lon, lat, c=np.array(w_plage), s=10, cmap='viridis', vmin=0.0)\n",
-        "axes[1].set_title('Plage ring weight')\n",
-        "axes[1].set_xlabel('Longitude [deg]')\n",
-        "axes[1].set_ylabel('Latitude [deg]')\n",
-        "fig.colorbar(sc1, ax=axes[1], label='w_plage')\n",
-        "\n",
-        "plt.show()\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Apply the spot to per-element labels\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "labels = {\n",
-        "    'T_eff': jnp.full(n_hat.shape[0], 5700.0),\n",
-        "    'Ca_H': jnp.full(n_hat.shape[0], -0.1),\n",
-        "}\n",
-        "\n",
-        "spotted = apply_ring_spot_to_labels(labels, n_hat, s_hat, cfg)\n",
-        "\n",
-        "temp_delta = np.array(spotted['T_eff'] - labels['T_eff'])\n",
-        "ca_delta = np.array(spotted['Ca_H'] - labels['Ca_H'])\n",
-        "\n",
-        "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
-        "sc0 = axes[0].scatter(lon, lat, c=temp_delta, s=10, cmap='coolwarm')\n",
-        "axes[0].set_title('Temperature perturbation [K]')\n",
-        "axes[0].set_xlabel('Longitude [deg]')\n",
-        "axes[0].set_ylabel('Latitude [deg]')\n",
-        "fig.colorbar(sc0, ax=axes[0], label='\u0394T')\n",
-        "\n",
-        "sc1 = axes[1].scatter(lon, lat, c=ca_delta, s=10, cmap='Spectral')\n",
-        "axes[1].set_title('Ca abundance perturbation [dex]')\n",
-        "axes[1].set_xlabel('Longitude [deg]')\n",
-        "axes[1].set_ylabel('Latitude [deg]')\n",
-        "fig.colorbar(sc1, ax=axes[1], label='\u0394[Ca/H]')\n",
-        "\n",
-        "plt.show()\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Ca II IRT scaling factors\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "scale_map = ca_irt_scale_map(n_hat, s_hat, cfg)\n",
-        "\n",
-        "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
-        "axes[0].hist(np.array(scale_map), bins=30, color='tab:blue')\n",
-        "axes[0].set_xlabel('Scale factor')\n",
-        "axes[0].set_ylabel('Count')\n",
-        "axes[0].set_title('Distribution of Ca II IRT scaling')\n",
-        "\n",
-        "sc = axes[1].scatter(lon, lat, c=np.array(scale_map), s=10, cmap='plasma')\n",
-        "axes[1].set_title('Spatial map of scaling')\n",
-        "axes[1].set_xlabel('Longitude [deg]')\n",
-        "axes[1].set_ylabel('Latitude [deg]')\n",
-        "fig.colorbar(sc, ax=axes[1], label='S_CaIRT')\n",
-        "\n",
-        "plt.show()\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Applying the scaling to a toy line profile\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "wavelength = jnp.linspace(848.0, 870.0, 800)\n",
-        "I_cont = jnp.ones_like(wavelength)\n",
-        "I_lambda = I_cont - 0.45 * jnp.exp(-0.5 * ((wavelength - 854.2) / 0.45) ** 2)\n",
-        "mask_irt = (wavelength > 852.5) & (wavelength < 856.0)\n",
-        "\n",
-        "# Grab the scale factor at the peak of the plage ring\n",
-        "scale_example = float(scale_map[np.argmax(np.array(w_plage))])\n",
-        "I_scaled = apply_ca_irt_scaling_local(I_lambda, I_cont, scale_example, mask_irt)\n",
-        "\n",
-        "plt.figure(figsize=(8, 4))\n",
-        "plt.plot(wavelength, I_lambda, label='Original profile')\n",
-        "plt.plot(wavelength, I_scaled, label=f'Scaled (S={scale_example:.2f})')\n",
-        "plt.xlabel('Wavelength [nm]')\n",
-        "plt.ylabel('Normalized intensity')\n",
-        "plt.title('Ca II IRT depth scaling example')\n",
-        "plt.legend()\n",
-        "plt.show()\n"
-      ]
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.10"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ring spot helper demonstration"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 5
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook demonstrates the analytic ring spot helper using the same mesh API that powers `add_spherical_harmonic_spot` or `add_pulsation`, so you can drop it into the usual SPICE surface modeling workflow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import jax.numpy as jnp\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from spice.models import IcosphereModel\n",
+    "from spice.models.spots import add_ring_spot, RingSpotConfig\n",
+    "from spice.utils.ring_spot import ring_spot_weights, ca_irt_scale_map, apply_ca_irt_scaling_local\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build a base mesh and apply `add_ring_spot`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "cfg = RingSpotConfig()\n",
+    "base_temp = 5700.0\n",
+    "base_ca = -0.1\n",
+    "\n",
+    "mesh = IcosphereModel.construct(\n",
+    "    2000,\n",
+    "    1.0,\n",
+    "    1.0,\n",
+    "    jnp.array([base_temp, base_ca]),\n",
+    "    ['teff', 'ca']\n",
+    ")\n",
+    "\n",
+    "spot_axis = jnp.array([0.0, 0.0, 1.0])\n",
+    "spotted_mesh = add_ring_spot(\n",
+    "    mesh,\n",
+    "    param_index=0,\n",
+    "    config=cfg,\n",
+    "    ca_param_index=1,\n",
+    "    spot_axis=spot_axis,\n",
+    ")\n",
+    "\n",
+    "normals = mesh.d_centers / jnp.linalg.norm(mesh.d_centers, axis=1, keepdims=True)\n",
+    "w_umb, w_plage = ring_spot_weights(normals, spot_axis, cfg)\n",
+    "\n",
+    "normals_np = np.array(normals)\n",
+    "lon = np.degrees(np.arctan2(normals_np[:, 1], normals_np[:, 0]))\n",
+    "lat = np.degrees(np.arcsin(normals_np[:, 2]))\n",
+    "\n",
+    "temp_delta = np.array(spotted_mesh.parameters[:, 0] - mesh.parameters[:, 0])\n",
+    "ca_delta = np.array(spotted_mesh.parameters[:, 1] - mesh.parameters[:, 1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Umbra and plage weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
+    "sc0 = axes[0].scatter(lon, lat, c=np.array(w_umb), s=10, cmap='magma', vmin=0.0)\n",
+    "axes[0].set_title('Umbra weight')\n",
+    "axes[0].set_xlabel('Longitude [deg]')\n",
+    "axes[0].set_ylabel('Latitude [deg]')\n",
+    "fig.colorbar(sc0, ax=axes[0], label='w_umb')\n",
+    "\n",
+    "sc1 = axes[1].scatter(lon, lat, c=np.array(w_plage), s=10, cmap='viridis', vmin=0.0)\n",
+    "axes[1].set_title('Plage ring weight')\n",
+    "axes[1].set_xlabel('Longitude [deg]')\n",
+    "axes[1].set_ylabel('Latitude [deg]')\n",
+    "fig.colorbar(sc1, ax=axes[1], label='w_plage')\n",
+    "\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameter perturbations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
+    "sc0 = axes[0].scatter(lon, lat, c=temp_delta, s=10, cmap='coolwarm')\n",
+    "axes[0].set_title('Temperature perturbation [K]')\n",
+    "axes[0].set_xlabel('Longitude [deg]')\n",
+    "axes[0].set_ylabel('Latitude [deg]')\n",
+    "fig.colorbar(sc0, ax=axes[0], label='\u0394T')\n",
+    "\n",
+    "sc1 = axes[1].scatter(lon, lat, c=ca_delta, s=10, cmap='Spectral')\n",
+    "axes[1].set_title('Ca abundance perturbation [dex]')\n",
+    "axes[1].set_xlabel('Longitude [deg]')\n",
+    "axes[1].set_ylabel('Latitude [deg]')\n",
+    "fig.colorbar(sc1, ax=axes[1], label='\u0394[Ca/H]')\n",
+    "\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ca II IRT scaling factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "scale_map = ca_irt_scale_map(normals, spot_axis, cfg)\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
+    "axes[0].hist(np.array(scale_map), bins=30, color='tab:blue')\n",
+    "axes[0].set_xlabel('Scale factor')\n",
+    "axes[0].set_ylabel('Count')\n",
+    "axes[0].set_title('Distribution of Ca II IRT scaling')\n",
+    "\n",
+    "sc = axes[1].scatter(lon, lat, c=np.array(scale_map), s=10, cmap='plasma')\n",
+    "axes[1].set_title('Spatial map of scaling')\n",
+    "axes[1].set_xlabel('Longitude [deg]')\n",
+    "axes[1].set_ylabel('Latitude [deg]')\n",
+    "fig.colorbar(sc, ax=axes[1], label='S_CaIRT')\n",
+    "\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Applying the scaling to a toy line profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "wavelength = jnp.linspace(848.0, 870.0, 800)\n",
+    "I_cont = jnp.ones_like(wavelength)\n",
+    "I_lambda = I_cont - 0.45 * jnp.exp(-0.5 * ((wavelength - 854.2) / 0.45) ** 2)\n",
+    "mask_irt = (wavelength > 852.5) & (wavelength < 856.0)\n",
+    "\n",
+    "scale_example = float(scale_map[np.argmax(np.array(w_plage))])\n",
+    "I_scaled = apply_ca_irt_scaling_local(I_lambda, I_cont, scale_example, mask_irt)\n",
+    "\n",
+    "plt.figure(figsize=(8, 4))\n",
+    "plt.plot(wavelength, I_lambda, label='Original profile')\n",
+    "plt.plot(wavelength, I_scaled, label=f'Scaled (S={scale_example:.2f})')\n",
+    "plt.xlabel('Wavelength [nm]')\n",
+    "plt.ylabel('Normalized intensity')\n",
+    "plt.title('Ca II IRT depth scaling example')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
