Generalize ring spot configuration

--- a/tutorial/ring_spot_demo.ipynb
+++ b/tutorial/ring_spot_demo.ipynb
@@ -55,11 +55,20 @@
     ")\n",
     "\n",
     "spot_axis = jnp.array([0.0, 0.0, 1.0])\n",
-    "spotted_mesh = add_ring_spot(\n",
+    "# First perturb the temperature column\n",
+    "temp_mesh = add_ring_spot(\n",
     "    mesh,\n",
     "    param_index=0,\n",
     "    config=cfg,\n",
-    "    ca_param_index=1,\n",
+    "    spot_axis=spot_axis,\n",
+    ")\n",
+    "# Reuse the same geometry but change the deltas for the Ca abundance column\n",
+    "spotted_mesh = add_ring_spot(\n",
+    "    temp_mesh,\n",
+    "    param_index=1,\n",
+    "    config=cfg,\n",
+    "    umbra_delta=-0.3,\n",
+    "    plage_delta=0.5,\n",
     "    spot_axis=spot_axis,\n",
     ")\n",
     "\n",
@@ -71,7 +80,7 @@
     "lat = np.degrees(np.arcsin(normals_np[:, 2]))\n",
     "\n",
     "temp_delta = np.array(spotted_mesh.parameters[:, 0] - mesh.parameters[:, 0])\n",
-    "ca_delta = np.array(spotted_mesh.parameters[:, 1] - mesh.parameters[:, 1])\n"
+    "ca_delta = np.array(spotted_mesh.parameters[:, 1] - mesh.parameters[:, 1])"
    ]
   },
   {
@@ -145,7 +154,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "scale_map = ca_irt_scale_map(normals, spot_axis, cfg)\n",
+    "scale_map = ca_irt_scale_map(normals, spot_axis, cfg, plage_scale=0.7, umbra_scale=-0.3)\n",
     "\n",
     "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
     "axes[0].hist(np.array(scale_map), bins=30, color='tab:blue')\n",
