--- a/tutorial/ring_spot_demo.ipynb
+++ b/tutorial/ring_spot_demo.ipynb
@@ -54,22 +54,31 @@
     "    ['teff', 'ca']\n",
     ")\n",
     "\n",
-    "spot_axis = jnp.array([0.0, 0.0, 1.0])\n",
+    "spot_center_theta = jnp.deg2rad(30.0)\n",
+    "spot_center_phi = jnp.deg2rad(40.0)\n",
+    "spot_axis = jnp.array([\n",
+    "    jnp.sin(spot_center_theta) * jnp.cos(spot_center_phi),\n",
+    "    jnp.sin(spot_center_theta) * jnp.sin(spot_center_phi),\n",
+    "    jnp.cos(spot_center_theta),\n",
+    "])\n",
+    "\n",
     "# First perturb the temperature column\n",
     "temp_mesh = add_ring_spot(\n",
     "    mesh,\n",
+    "    spot_center_theta=spot_center_theta,\n",
+    "    spot_center_phi=spot_center_phi,\n",
     "    param_index=0,\n",
     "    config=cfg,\n",
-    "    spot_axis=spot_axis,\n",
     ")\n",
     "# Reuse the same geometry but change the deltas for the Ca abundance column\n",
     "spotted_mesh = add_ring_spot(\n",
     "    temp_mesh,\n",
+    "    spot_center_theta=spot_center_theta,\n",
+    "    spot_center_phi=spot_center_phi,\n",
     "    param_index=1,\n",
     "    config=cfg,\n",
     "    umbra_delta=-0.3,\n",
     "    plage_delta=0.5,\n",
-    "    spot_axis=spot_axis,\n",
     ")\n",
     "\n",
     "normals = mesh.d_centers / jnp.linalg.norm(mesh.d_centers, axis=1, keepdims=True)\n",
@@ -80,7 +89,7 @@
     "lat = np.degrees(np.arcsin(normals_np[:, 2]))\n",
     "\n",
     "temp_delta = np.array(spotted_mesh.parameters[:, 0] - mesh.parameters[:, 0])\n",
-    "ca_delta = np.array(spotted_mesh.parameters[:, 1] - mesh.parameters[:, 1])"
+    "ca_delta = np.array(spotted_mesh.parameters[:, 1] - mesh.parameters[:, 1])\n"
    ]
   },
   {
